--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -5,9 +5,7 @@ log4j.rootLogger=WARN, file
 
 # Redirect to Tomcat logs folder
 
-log4j.appender.file=org.apache.log4j.FileAppender 
-log4j.appender.file.File=src\main\java\log.txt
-
+log4j.appender.file.File=${catalina.home}/logs/koality-logging.log
 
 log4j.appender.file.MaxFileSize=5MB
 log4j.appender.file.MaxBackupIndex=10
